k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: onlinevotingsystem-89f7f24aa7-test.apps.ir-central1.arvancaas.ir
    http:
      paths:
      - path: /auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /poll/?(.*)
        pathType: Prefix
        backend:
          service:
            name: poll-service
            port:
              number: 80
      - path: /vote/?(.*)
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /result/?(.*)
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
